--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello STA Rentals</title>
-    <style>
-        body {
-            background-color: #002B7F;
-            color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            padding-top: 100px;
-        }
-        h1 {
-            font-size: 3em;
-        }
-        p {
-            font-size: 1.5em;
-            color: gold;
-        }
-    </style>
-</head>
-<body>
-    <h1>Hello STA Rentals 👋🏽</h1>
-    <p>Your luxury experience starts here.</p>
-</body>
-</html>
+<!doctype html><html><head><meta charset='utf-8'><title>STA Rentals</title><link rel='icon' href='assets/images/favicon.png'></head><body><h1>STA Rentals v4 (preview)</h1></body></html>
